# snowflake-developer-kit

./: .gitignore  LICENSE  README.md  dev-inspector.sh  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/core/: __init__.py  exceptions.py  models.py  response_handlers.py  snowflake_utils.py
src/helpers/: __init__.py  ddl_manager.py  dml_manager.py  operations_manager.py
src/middleware/: __init__.py  snowflake_middleware.py
src/tools/: __init__.py  ddl_tools.py  dml_tools.py  operations_tools.py
